# vidalia

./: CHANGELOG  CMakeLists.txt  config.h.in  configure  configure.in
changes/: appendRouterStatus  bug3957  bug4203  bug5110  bug5351  bug5475  bug5766  bug5769  bug6147  bug6178  bug6482  bug6568  featBrowserSettings  openssl_dep  settings_automigration  win_static_ws32
cmake/: VidaliaMacros.cmake
pkg/: build-geoip-cache.sh  package.sh
pkg/osx/: CMakeLists.txt  PrivoxyConfInfo.plist  TorPostFlight  TorbuttonInfo.plist  VidaliaBundleInfo.plist.in  VidaliaInfo.plist.in  build-bundle.txt  buildmpkg.sh.in  vidalia.conf.sample
pkg/win32/: build-vidalia-installer.txt  vidalia-bundle.nsi  vidalia-bundle.nsi.in  vidalia.nsi  vidalia.nsi.in
pkg/win32/cs/: vidalia_cs.po
pkg/win32/fi/: vidalia_fi.po
pkg/win32/fr/: vidalia_fr.po
src/: vidalia.h
src/common/: CMakeLists.txt  file.cpp  procutil.cpp  procutil.h  win32.cpp
src/gui/res/: vidalia_win.rc
src/torcontrol/: Circuit.cpp  Circuit.h  ControlConnection.cpp  ControlConnection.h  RouterDescriptor.cpp  SendCommandEvent.cpp  TorControl.cpp  TorControl.h  TorProcess.cpp  torcontrol.cpp  torcontrol.h
src/vidalia/: CMakeLists.txt  ControlPasswordInputDialog.cpp  ControlPasswordInputDialog.h  HelperProcess.cpp  LanguageSupport.cpp  MainWindow.cpp  MainWindow.h  VClickLabel.cpp  VClickLabel.h  VMessageBox.cpp  VMessageBox.h  Vidalia.cpp  Vidalia.h  languagesupport.cpp  main.cpp  mainwindow.cpp  mainwindow.h
src/vidalia/bwgraph/: BandwidthGraph.cpp  BandwidthGraph.h
src/vidalia/config/: AbstractTorSettings.cpp  AbstractTorSettings.h  AdvancedPage.cpp  AdvancedPage.h  ConfigDialog.cpp  ConfigDialog.h  ConfigPage.h  GeneralPage.cpp  NetworkPage.cpp  NetworkPage.h  NetworkSettings.cpp  ServerPage.cpp  ServerPage.h  ServerSettings.cpp  ServerSettings.h  Service.cpp  Service.h  ServiceList.cpp  ServiceList.h  ServicePage.cpp  ServicePage.h  ServiceSettings.cpp  ServiceSettings.h  TorSettings.cpp  TorSettings.h  TorrcDialog.cpp  TorrcDialog.h  VSettings.cpp  VSettings.h  VidaliaSettings.cpp  VidaliaSettings.h  advancedpage.cpp  serverpage.ui  serversettings.cpp  servicepage.cpp  servicepage.h  torsettings.cpp  upnpcontrol.cpp  vidaliasettings.cpp  vidaliasettings.h
src/vidalia/i18n/: CMakeLists.txt  vidalia_i18n.qrc
src/vidalia/log/: MessageLog.cpp  MessageLog.h  messagelog.cpp
src/vidalia/network/: NetViewer.cpp  NetViewer.h  RouterDescriptorView.cpp  RouterInfoDialog.cpp  RouterListItem.cpp  RouterListWidget.cpp  RouterListWidget.h  TorMapWidget.cpp  TorMapWidget.h  TorMapWidgetInputHandler.cpp  TorMapWidgetInputHandler.h  TorMapWidgetPopupMenu.cpp  TorMapWidgetPopupMenu.h  ZImageView.cpp  geoipresolver.cpp  geoipresponse.cpp  geoipresponse.h  routerdescriptorview.cpp  tormapwidget.cpp
src/vidalia/res/: vidalia.qrc
trunk/src/control/: eventtype.h
(+277 files in other folders)
